--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,45 @@
+h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: sans-serif;
+  height: 100px;
+}
 
+.jobs {
+  display: flex;
+  width: 1024px;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  padding-top: 20px;
+  gap: 30px;
+}
+
+.job {
+  height: 300px;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.job span {
+  font-family: sans-serif;
+  margin: 20px;
+}
+
+.red {
+  border: 10px solid #e30413;
+}
+.blue {
+  border: 10px solid #039fe3;
+}
+.pink {
+  border: 10px solid #f8c5af;
+}
+.yellow {
+  border: 10px solid #ffee00;
+}
+.green {
+  border: 10px solid #3ea535;
+}
